First_Step/data/45/203/compilation.txt
Executable.java:23: error: '.class' expected
        return(tools.sortBubble(int[] count));
                                      ^
Executable.java:23: error: ';' expected
        return(tools.sortBubble(int[] count));
                                            ^
2 errors
./Executable.java:23: error: '.class' expected
        return(tools.sortBubble(int[] count));
                                      ^
./Executable.java:23: error: ';' expected
        return(tools.sortBubble(int[] count));
                                            ^
./Executable.java:23: error: unexpected type
        return(tools.sortBubble(int[] count));
                                   ^
  required: value
  found:    class
3 errors
